--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    
+    <div class="container">
+        <h1 class="heading">Simple Coding Calculator</h1>
         <input type="number" id="num1"/>
-        <input type="number" id="num1"/>
+        <input type="number" id="num2"/>
         <button id="calcSumButtonPost">calc Sum Post</button>
         <button id="calcSumButtonGet">calc Sum Get</button>
     </div>
-  <div id="result">
+  <div id="result" class="result">
 
   </div>
 
